--- a/index.html
+++ b/index.html
@@ -8,6 +8,49 @@
     <title>Grey Wolf</title>
 </head>
 <body>
+
+    <div class="beregner" id="beregner"> <!-- Moduale -->
+        <div class="beregner-container">
+            <a href="#" id="close-button"><i class="fa-solid fa-xmark"></i></a>
+            <h3>Genbrugsberegner</h3>
+            <p>Indsæt mængden af kilo samt materiale du ville sende ind, også ville vi finde ud af, hvad du kan få af Store Credits for det!</p>
+            <h4>Hvor mange kilo vil du sende?</h4>
+            <select name="" id="" class="max-width"> 
+                <option disabled selected>Vælg antal af kilo</option>
+                <option>1kg</option>
+                <option>2kg</option>
+                <option>3kg</option>
+                <option>4kg</option>
+                <option>5kg</option>
+                <option>6kg</option>
+                <option>7kg</option>
+                <option>8kg</option>
+                <option>9kg</option>
+                <option>10kg</option>
+            </select>
+            <h4>Hvilke materialer sender du?</h4>
+            <select class="max-width">
+                <option disabled selected>Vælg materiale</option>
+                <option>Bomuld</option>
+                <option>Polyester</option>
+                <option>Uld</option>
+                <option>Demin</option>
+                <option>Læder</option>
+                <option>Silke</option>
+                <option>Bambus</option>
+                <option>Hør</option>
+                <option>Andet</option>
+            </select>
+            <br/>
+                <button class="knap-mellem knap-orange">Beregn nu</button>
+            <div id="store-credit-resultat">
+                <p>Du kan få:</p>
+                <h4>250 Store Credits</h4>
+                <p>(svarende til 250 kr.)</p>
+            </div>
+        </div>
+    </div>
+
     <!--Headeren-->
     <header class="menu-header">
         <div class="header-icons-left">
@@ -49,23 +92,15 @@
             <div class="genbrug">
                 <img src="img/Forvandl.png" class="responsive-image" alt="Forvandl Dine gamle sokker til et Bæredygtigt ´Tidsløst Jakkesæt">
                 <button class="knap-orange knap-stor"><a href="#beregner">Begren Nu</a></button>
-                    <div class="beregner" id="beregner"> <!-- Moduale -->
-                        <div class="beregner-container">
-                            <p>I dont love coding</p>
-                            <a href="#">Close</a>
-                        </div>
-                    </div>
+     
                 </div>
             </div>
         </section>
 
         <!-- Udvalgt produkt (Har ikke lavet den pt.)-->
         <article class="udvalgt">
-            <!-- Indsæt shopvarene udvalgt her-->
+            <img src="img/dame-blazer-brun.png"/> 
         </article>
-
-
-
 
         <!-- Matrialer -->
         <section class="matrialer">
