--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <section>
             <div class="genbrug">
                 <img src="img/Forvandl.png" class="responsive-image" alt="Forvandl Dine gamle sokker til et Bæredygtigt ´Tidsløst Jakkesæt">
-                <button class="knap-orange knap-stor"><a href="#beregner">Begren Nu</a></button>
+                <button class="knap-orange knap-stor"><a href="#beregner">Beregn</a></button>
      
                 </div>
             </div>
