--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <!-- Genbrugssektion -->
         <section>
             <div class="genbrug">
-                <img src="img/Forvandl.png" class="responsive-image" alt="Forvandl Dine gamle sokker til et Bæredygtigt ´Tidsløst Jakkesæt">
+                <img src="img/Deal.png" class="responsive-image" alt="Forvandl Dine gamle sokker til et Bæredygtigt ´Tidsløst Jakkesæt">
                 <button class="knap-orange knap-stor"><a href="#beregner">Beregn</a></button>
      
                 </div>
@@ -106,18 +106,19 @@
         <section class="matrialer">
             <h2>Vores Matrialer</h2>
             <div class="matrialer-content">
-                <div class="matriale-udvalg">
-                    <img src="img/Bambus.jpg"> <!-- Indsæt billede -->
-                    <p class="smalltext">Bambus</p>
-                </div>
-                <div class="matriale-udvalg">
-                    <img src="img/Økologisk bomuld.jpg"> <!-- Indsæt billede -->
-                    <p class="smalltext">Økologisk Bomuld</p>
-                </div>
-                <div class="matriale-udvalg">
-                    <img src="img/Hør.jpg"> <!-- Indsæt billede -->
-                    <p class="smalltext">Hør</p>
-                </div>
+                <figure class="matriale-udvalg">
+                    <img src="img/Bambus Org.png" alt="Bambus">
+                    <figcaption>Bambus</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/Økologisk Bomuld Org.png" alt="Økologisk bomuld">
+                    <figcaption>Økologisk Bomuld</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/Hør Org.png" alt="Hør">
+                    <figcaption>Hør</figcaption>
+                </figure>
+            </div>
             </div>
             <p>Grey Wolf producerer bæredygtigt tøj med fokus på
             <br>naturlige materialer som bambus, økologisk bomuld
