Rettet Matrialer og Certificeringer til at stå korrekt

--- a/index.html
+++ b/index.html
@@ -102,41 +102,34 @@
             <img src="img/dame-blazer-brun.png"/> 
         </article>
 
-        <!-- Matrialer -->
+        <!-- Matrialer & Certificeringer -->
         <section class="matrialer">
             <h2>Vores Matrialer</h2>
-            <div class="matrialer-content">
-                <figure class="matriale-udvalg">
-                    <img src="img/Bambus Org.png" alt="Bambus">
-                    <figcaption>Bambus</figcaption>
-                </figure>
-                <figure>
-                    <img src="img/Økologisk Bomuld Org.png" alt="Økologisk bomuld">
-                    <figcaption>Økologisk Bomuld</figcaption>
-                </figure>
-                <figure>
-                    <img src="img/Hør Org.png" alt="Hør">
-                    <figcaption>Hør</figcaption>
-                </figure>
-            </div>
-            </div>
-            <p>Grey Wolf producerer bæredygtigt tøj med fokus på
-            <br>naturlige materialer som bambus, økologisk bomuld
-            <br>og hør. Ved at vælge disse materialer reducerer
-            <br>virksomheden deres CO2 -aftryk, da det kræver mindre 
-            <br>vand og energi at fremstille.</p>
-            <a class="link-text" href="index.html"> <!-- Ændre linket -->
-                <button class="knap-stor knap-orange">
-                    <p id="readmore">Læs Mere</p>
+            <div class="divider"></div>
+            <div class="matrialer-og-certificeringer">
+                <div class="matrialer-content">
+                    <div class="matriale-udvalg">
+                        <img id="matriale-img" src="img/Bambus Org.png" alt="Bambus">
+                        <p class="matrialer-paragraf">Bambus</p>
+                    </div>
+                    <div>
+                        <img id="matriale-img" src="img/Økologisk Bomuld Org.png" alt="Økologisk bomuld">
+                        <p class="matrialer-paragraf">Økologisk Bomuld</p>
+                    </div>
+                    <div>
+                        <img id="matriale-img" src="img/Hør Org.png" alt="Hør">
+                        <p class="matrialer-paragraf">Hør</p>
+                    </div>
                 </div>
-            </a>
-        </section>
-
-
-
-        <section class="certificeringer"></section>
+            <p class="matrialer-paragraf">Grey Wolf producerer bæredygtigt tøj med fokus på
+            naturlige materialer som bambus, økologisk bomuld
+            og hør. Ved at vælge disse materialer reducerer
+            virksomheden deres CO2 -aftryk, da det kræver mindre 
+            vand og energi at fremstille.</p>
+            <div class="divider"></div>
+            <a class="link-text knap-stor knap-orange matrialer-knap" href="index.html">Læs Mere</a>
             <h2>Certificeringer</h2>
-            <p class="beskrivelse">Grey Wolf er certificeret med GOTS, FSC og OEKO-TEX,
+            <p class="matrialer-paragraf">Grey Wolf er certificeret med GOTS, FSC og OEKO-TEX,
             <br>hvilket sikrer høj standard for bæredygtighed i 
             <br>produktionen. GOTS garanterer økologisk 
             <br>tekstilproduktion, FSC-certifikatet bekræfter
