Fixed "Shop Nu" knappen

--- a/index.html
+++ b/index.html
@@ -81,9 +81,7 @@
                 Din browser støtter ikke denne video. Prøv en anden browser eller genindlæs siden.
             </video> 
             <div id="hero-footer">
-                <a class="link-text" href="index.html"> <!-- Ændre linket -->
-                    <button class="knap-stor knap-orange">Shop Nu</button>
-                </a>
+                <a class="link-text knap-stor knap-orange" id="shopnu" href="shopside.html">Shop Nu</a>
             </div>
         </div> 
         
@@ -91,8 +89,7 @@
         <section>
             <div class="genbrug">
                 <img src="img/Deal.png" class="responsive-image" alt="Forvandl Dine gamle sokker til et Bæredygtigt ´Tidsløst Jakkesæt">
-                <button class="knap-orange knap-stor"><a href="#beregner">Beregn</a></button>
-     
+                <a class="knap-stor knap-orange" href="#beregner">Beregn</a></button>
                 </div>
             </div>
         </section>
