Begyndt at kode shopsiden, men har også tilføjet billederne fra siden i Figma

--- a/shopside.html
+++ b/shopside.html
@@ -29,4 +29,19 @@
     </div>
 </header>
 
+<main>
+    <section id="mand-eller-kvinde">
+        <h2>Hvad er dit køn?</h2>
+        <div id="køn-vælgeren">
+            <a href="mandeprodukter.html">
+                <div class="kasse-selector">
+                    <img src="" alt="">
+                </div>
+            </a>
+        </div>
+    </section>
+
+
+</main>
+
 </body>
