Fået rækkerne af shopsiden til at virke (nogenlunde, margin skal fixes muligvis)

--- a/shopside.html
+++ b/shopside.html
@@ -31,17 +31,34 @@
 
 <main>
     <section id="mand-eller-kvinde">
-        <h2>Hvad er dit køn?</h2>
+        <h2 id="selec">Hvad er dit køn?</h2>
+        <div class="divider"></div>
         <div id="køn-vælgeren">
-            <a href="mandeprodukter.html">
-                <div class="kasse-selector">
-                    <img src="" alt="">
-                </div>
-            </a>
+            <div class="selector-række">
+                <a href="mandeprodukter.html">
+                    <div class="kasse-selector venstre-element">
+                        <img src="img/shopsiden/mand.png" alt="Mand i bæredygtigt jakkesæt">
+                        <div class="orange-selector">
+                            <h3>Mand</h3>
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </div>
+                    </div>
+                </a>
+                <a href="kvindeprodukter.html">
+                    <div class="kasse-selector højre-element">
+                        <img src="img/shopsiden/kvinde.png" alt="Kvinde i bæredygtigt jakkesæt">
+                        <div class="orange-selector">
+                            <h3>Kvinde</h3>
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </div>
+                    </div>  
+                </a>
+            </div>
         </div>
     </section>
 
-
 </main>
+
+<!-- Footeren -->
 
 </body>
