Tilføjet produkterne til siden. Pillene sætter ikke ordenligt

--- a/kvindeprodukter.html
+++ b/kvindeprodukter.html
@@ -29,4 +29,58 @@
     </div>
 </header>
 
+<main>
+    <section id="kvindelige-produkter">
+        <h2>Hvad ville du have?</h2>
+        <div class="divider"></div>
+        <div id="produkt-vælgeren">
+            <div class="selector-række">
+                <a href="#"> <!--Mangler link-->
+                    <div class="kasse-selector venstre-element">
+                        <img src="img/shopsiden/kvinde-blazer.png" alt="kvinde blazer">
+                        <div class="orange-selector blazer">
+                            <h3>Blazer</h3>
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </div>
+                    </div>
+                </a>
+                <a href="#"> <!--Mangler link-->
+                    <div class="kasse-selector højre-element">
+                        <img src="img/shopsiden/kvinder-buks.png" alt="kvinde buks">
+                        <div class="orange-selector buks">
+                            <h3>Buks</h3>
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </div>
+                    </div>  
+                </a>
+            </div>
+            <div class="divider"></div>
+            <div class="selector-række">
+                <a href="#"> <!--Mangler link-->
+                    <div class="kasse-selector venstre-element">
+                        <img src="img/shopsiden/Kvinde-skjorte.png" alt="Kvinde skjorte">
+                        <div class="orange-selector skjorte">
+                            <h3>Skjorte</h3>
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </div>
+                    </div>
+                </a>
+                <a href="#"> <!--Mangler link-->
+                    <div class="kasse-selector højre-element">
+                        <img src="img/shopsiden/kvinde-looket.png" alt="Kvinde looket">
+                        <div class="orange-selector looket">
+                            <h3>Looket</h3>
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </div>
+                    </div>  
+                </a>
+            </div>
+            <div class="divider"></div>
+        </div>
+    </section>
+
+</main>
+
+<!-- Footeren -->
+
 </body>
