--- a/shopside.html
+++ b/shopside.html
@@ -31,7 +31,7 @@
 
 <main>
     <section id="mand-eller-kvinde">
-        <h2 id="selec">Hvad er dit køn?</h2>
+        <h2>Hvad er dit køn?</h2>
         <div class="divider"></div>
         <div id="køn-vælgeren">
             <div class="selector-række">
