--- a/products.html
+++ b/products.html
@@ -8,4 +8,70 @@
 <body>
     
 </body>
+<footer class="footer">
+    <section class="accordion">
+     <div class="tab">
+         <label class="tab-label"> 
+             <h4><a href="/faq.html">FAQ</a></h4>
+         </label>
+     </div>
+     <div class="tab">
+         <label class="tab-label"> 
+             <h4><a href="/genbrugssystemet.html">Genbrugssystemet</a></h4>
+         </label>
+     </div>
+     <div class="tab">
+         <input type="checkbox" id="check-tab-1" />
+         <label class="tab-label" for="check-tab-1"> 
+             <h4>Betalingsmetoder</h4>
+             <i class="fa-solid fa-chevron-down"></i>
+         </label>
+         <div class="tab-content">
+             <div class="tab-content-inner">
+                 <div id="payment-logos"> 
+                 <img src="img/Visa logo.png" alt="visa logo">
+                 <img src="img/Mastercard logo.png" alt="mastercard logo">
+                 <img src="img/dankort logo.png" alt="dankort logo">
+                 <img src="img/mobilpay logo.png" alt="mobilpay logo">
+                 <img src="img/google pay logo.png" alt="googlepay logo">
+                 <img src="img/apple pay logo.png" alt="apple pay logo">
+                 </div>
+             </div>
+         </div>
+     </div>
+     <div class="tab">
+         <label class="tab-label" for="check-tab-2"> 
+             <h4>Vilkår og betingelser</h4>
+             <i class="fa-solid fa-chevron-down"></i>
+         </label>
+         <input type="checkbox" id="check-tab-2" />
+         <div class="tab-content">
+             <div class="tab-content-inner">
+                 <nav>
+                     <p><a href="/handelsbetingelser.html">Handelsbetingelser</a></p>
+                     <p><a href="/returneringspolitikker.html">Returneringspolitikker</a></p>
+                     <p><a href="/databeskyttelse.html">Databeskyttelse</a></p>
+                 </nav>
+             </div>
+         </div>
+    </section>
+    <section id="footer-bottom">
+     <h3>Tilmeld nyhedsbrev</h3>
+     <p>For at følge med i de seneste nyt om Grey Wolf</p>
+     <form>
+         <input type="email" id="newsletter-email" />
+     </form>
+     <h3>Kontakt os</h3>
+     <p>Email: info@greywolf.dk</p>
+     <p>Telefon: +45 12 34 56 78</p>
+     <p>Adresse: Havneparken 8</p>
+     <p>København 1050</p>
+     <h3>Sociale medier</h3>
+     <p id="some-logos">
+         <i class="fa-brands fa-linkedin"></i>
+         <i class="fa-brands fa-facebook"></i>
+         <i class="fa-brands fa-instagram"></i>
+     </p>
+    </section>
+ </footer>
 </html>
