Rettet certificeringer, footer og header

--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
     <!--Headeren-->
     <header class="menu-header">
         <div class="header-icons-left">
-            <a href="https://www.elgiganten.dk/"> <!-- Menuside indsættes her -->
-                <i class="fa-solid fa-bars header-icons"></i>
+            <a href="#"> <!-- Menuside indsættes her -->
+                <i class="fa-solid fa-bars header-icons" id="burgermenu"></i>
             </a>
             <a href="index.html"> <!-- Hovedmenu indsættes her -->
                 <i class="fa-solid fa-house header-icons"></i>
             </a>
         </div>
         <div class="header-icons-right">
-            <a href="https://www.elgiganten.dk/"> <!-- Profil side indsættes her -->
+            <a href="#"> <!-- Profil side indsættes her -->
                 <i class="fa-solid fa-user header-icons"></i>
             </a>
-            <a href="https://www.elgiganten.dk/"> <!-- Kurv-side indsættes her -->
+            <a href="#"> <!-- Kurv-side indsættes her -->
                 <i class="fa-solid fa-cart-shopping header-icons"></i>
             </a>
         </div>
@@ -246,15 +246,15 @@
        </section>
        <section id="footer-bottom">
         <h3>Tilmeld nyhedsbrev</h3>
-        <p>For at følge med i de seneste nyt om Grey Wolf</p>
+        <p class="p-større">For at følge med i de seneste nyt om Grey Wolf</p>
         <form>
             <input type="email" id="newsletter-email" />
         </form>
         <h3>Kontakt os</h3>
-        <p>Email: info@greywolf.dk</p>
-        <p>Telefon: +45 12 34 56 78</p>
-        <p>Adresse: Havneparken 8</p>
-        <p>København 1050</p>
+        <p class="p-større">Email: info@greywolf.dk</p>
+        <p class="p-større">Telefon: +45 12 34 56 78</p>
+        <p class="p-større">Adresse: Havneparken 8</p>
+        <p class="p-større">København 1050</p>
         <h3>Sociale medier</h3>
         <p id="some-logos">
             <i class="fa-brands fa-linkedin"></i>
